dfir_rs/tests/compile-fail/surface_syntax_noarrow_indexing.rs
use dfir_rs::dfir_syntax;

fn main() {
    let mut df = dfir_syntax! {
        x = for_each(std::mem::drop);
        source_iter(0..10) [0]x;
    };
    df.run_available();
}
