dfir_rs/tests/compile-fail/surface_syntax_noarrow_indexing.stderr
error: expected `->`
 --> tests/compile-fail/surface_syntax_noarrow_indexing.rs:6:28
  |
6 |         source_iter(0..10) [0]x;
  |                            ^
